--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "nodemon ./app.js"
 	},
 	"dependencies": {
+		"@sendgrid/mail": "^8.1.4",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
 		"debug": "~2.6.9",
